# fine_d

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts  使用说明.md
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/runtime/: README.md
src-tauri/src/: lib.rs  main.rs  test_support.rs
src-tauri/src/commands/: environment.rs  fine_decision.rs  mod.rs  project_config.rs  project_sync.rs  session.rs  session_control.rs  session_runtime.rs  session_support.rs  terminal.rs
src-tauri/src/commands/terminal/: tests.rs
src-tauri/src/domain/: codex_auth.rs  codex_cli.rs  codex_process_manager.rs  context_builder.rs  context_builder_data.rs  event_bridge.rs  fine_decision_client.rs  fine_decision_encryption.rs  fine_remote_bridge.rs  fine_remote_bridge_runtime.rs  mod.rs  project_config.rs  project_git.rs  project_initializer.rs  remote_directory_browser.rs  remote_reportlet_browser.rs  remote_runtime.rs  remote_sync_guard.rs  session_store.rs  sync_bootstrap.rs  sync_dispatcher.rs  sync_transport.rs  system_runtime.rs  terminal_event_bridge.rs  terminal_manager.rs
src-tauri/src/domain/terminal_manager/: cleanup.rs  runtime.rs  tests.rs
src-tauri/tests/: codex_process_manager_lifecycle.rs  context_builder_generates_sync_rules.rs  fine_decision_client.rs  project_config_roundtrip.rs  project_git_sync.rs  project_initializer_local.rs  project_initializer_real_path.rs  remote_sync_guard_path_matching.rs  remote_sync_protocols.rs  reportlet_tree_listing.rs  runtime_prerequisites.rs  session_context_refresh.rs  session_start_persists_manifest.rs  sync_dispatcher_resolves_tasks.rs  sync_manager_watches_changes.rs  sync_transport_local.rs  terminal_commands.rs  terminal_manager_lifecycle.rs
(+1452 files in other folders)
